hetzner-k3s/kube/04-kubernetes-dashboard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-dashboard
