hetzner-k3s/kube/05-prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
      middlewares:
        - name: basic-auth
          namespace: kube-system
