hetzner-k3s/kube/10-gitlab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app.kubernetes.io/name: gitlab
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: gitlab-skip-verify@kubernetescrd
spec:
  selector:
    app.kubernetes.io/name: gitlab
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app.kubernetes.io/name: gitlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: gitlab.ulexxander.work
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: gitlab
                port:
                  name: https

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app.kubernetes.io/name: gitlab
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gitlab
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ee:16.2.4-ee.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
            - name: tcp
              containerPort: 22
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/gitlab
            - name: logs
              mountPath: /var/log/gitlab
            - name: data
              mountPath: /var/opt/gitlab
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: gitlab-config
        - name: logs
          persistentVolumeClaim:
            claimName: gitlab-logs
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-data
